--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,5 +1,5 @@
 <resources>
-    <string name="app_name">밥주세요</string>
+    <string name="app_name">Life is a journey</string>
     <string name="map_key" translatable="false">AIzaSyBz7Wzq-hDppkuq3c6wfe73KipHyRyKTio</string>
     <string name="action_settings">Settings</string>
 
